Add libffi-dev, fix dockerfile build for alpine version

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,7 @@
 # Environement variables
+
+## Supercronic install settings
+SUPERCRONIC_REL=${SUPERCRONIC_REL-"v0.1.8"}
+SUPERCRONIC_URL=https://github.com/aptible/supercronic/releases/download/${SUPERCRONIC_REL}/supercronic-linux-amd64
+SUPERCRONIC=supercronic-linux-amd64
+SUPERCRONIC_SHA1SUM=be43e64c45acd6ec4fce5831e03759c89676a0ea
