--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,102 @@
-version: '3'
+version: "3"
+
 services:
+
+  #############################
+  # TWINT                     #
+  #############################
   twint:
     build: .
     container_name: twint
   
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.1
-    container_name: twint_elasticsearch
+  #############################
+  # TOR PRIVOXY               #
+  #############################  
+  tor-privoxy:
+    restart: always
+    container_name: torp
+    image: dockage/tor-privoxy:latest
+    ports:
+    - "9050:9050" # Tor proxy
+    - "9051:9051" # Tor control port
+    - "8118:8118" # Privoxy
+
+  #############################
+  # ELASTICSEARCH MASTER NODE #
+  #############################
+  master:
+    restart: unless-stopped
+    image: blacktop/elasticsearch:7.3
     environment:
-      - node.name=elasticsearch
-      - cluster.initial_master_nodes=elasticsearch
       - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+      - node.master=true
+      - node.ingest=false
+      - node.data=false
     volumes:
-      - esdata01:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
+      - data:/usr/share/elasticsearch/data
+    networks:
+      - elastic
 
+  ####################################
+  # ELASTICSEARCH CLIENT/INGEST NODE #
+  ####################################
+  ingest:
+    restart: unless-stopped
+    image: blacktop/elasticsearch:7.3
+    environment:
+      - cluster.name=docker-cluster
+      - node.master=true
+      - node.ingest=true
+      - node.data=false
+      - discovery.zen.ping.unicast.hosts=master
+    ports:
+      - "9200:9200"
+    links:
+     - master:elastic-master
+    networks:
+      - elastic
+
+  ###########################
+  # ELASTICSEARCH DATA NODE #
+  ###########################
+  data:
+    restart: unless-stopped
+    image: blacktop/elasticsearch:7.3
+    environment:
+      - ES_JAVA_OPTS=-Xms2g -Xmx2g
+      - cluster.name=docker-cluster
+      - node.master=false
+      - node.ingest=false
+      - node.data=true
+      - discovery.zen.ping.unicast.hosts=master
+    links:
+     - master:elastic-master
+    # volumes:
+    #   - data:/usr/share/elasticsearch/data
+    networks:
+      - elastic
+
+  ###############
+  # KIBANA NODE #
+  ###############
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.0.1
-    container_name: twint_kibana
+    image: blacktop/kibana:7.3
     ports:
-      - 5601:5601
+      - "80:5601"
+    links:
+     - ingest:elasticsearch
+    networks:
+      - elastic
 
+#############################
+# ELASTICSEARCH DATA VOLUME #
+#############################
 volumes:
-  esdata01:
-    driver: local
+  data:
 
+################################
+# ELASTICSEARCH BRIDGE NETWORK #
+################################
 networks:
-  default:
-    external:
-      name: nw_twint
+  elastic:
+    driver: bridge
